styles.css
.title {
    border: 2px solid black;
    border-radius: 5px;
    margin: auto;
    width: 50%;
    text-align: left;
    display: flex;
    justify-content: space-between;
    gap: 20px;
    padding: 0px 15px;
    margin-bottom: 2%;
  }
  @media screen and (max-width: 600px) {
    .title {
      width: 70%;
      align-items: center;
    }
    .title h1 {
      font-size: 1.5rem;
    }
    .card-container {
      min-height: 10vh!important;
    }
    .game-container {
      margin-top: 5vh;
    }
    .styled-wrapper .button {
      scale: 75%;
    }
  }

  h1 {
    font-family: "Rubik", sans-serif;
    font-weight: 400;
  }
  h2 {
    font-family: "Rubik", sans-serif;
    font-weight: 400;
  }
  h5 {
    font-family: "Rubik", sans-serif;
    font-weight: 300;
    font-size: medium;
  }
  
  .score-wrapper {
    display: flex;
    align-items: center;
    gap: 6px;
  }
  
  .box {
    text-align: center;
    max-height: fit-content;
  }
  
  .fade-in {
    animation: fadeIn 0.5s forwards;
  }
  
  @keyframes fadeIn {
    from { opacity: 0; transform: translateY(20px); }
    to { opacity: 1; transform: translateY(0px); }
  }
  
  a {
    cursor: pointer;
  }
  
  html, body{
    height:100%;
  }
  
  body{
            background-image: -webkit-linear-gradient(top, #eaeaea, #dbdbdb);
              background-image: linear-gradient(top, #466d4c, #1b6224);
  }
  
  .face-red:after {
    content: "🃟";
  }
  .number-red:after {
    content: "🂲";
    color: #eb2f2f;
    left: 15px;
    top: 7px;
  }
  .number-black:after {
    content: "🂢";
    color: #000000;
    left: 15px;
    top: 7px;
  }
  
  .colorBtns,
  .suitBtns,
  .faceNumBtns,
  .faceOrNumBtns,
  .higherLowerBtns {
    display: flex;
    justify-content: center;
    gap: 20px;
  }

  /* From Uiverse.io by adamgiebl */ 
button {
  position: relative;
  display: inline-block;
  margin: 15px;
  padding: 15px 30px;
  text-align: center;
  font-size: 18px;
  letter-spacing: 1px;
  text-decoration: none;
  /* color: #725AC1; */
  background: transparent;
  cursor: pointer;
  transition: ease-out 0.5s;
  /* border: 2px solid #725AC1; */
  border-radius: 10px;
  /* box-shadow: inset 0 0 0 0 #725AC1; */
}

.red {
  color: #eb2f2f;
  border: 2px solid #eb2f2f;
  box-shadow: inset 0 0 0 0 #eb2f2f;
}
.red:hover,.red:active {
  color: white;
  box-shadow: inset 0 -100px 0 0 #eb2f2f;
}

.black {
  color: #191919;
  border: 2px solid #191919;
  box-shadow: inset 0 0 0 0 #191919;
}
.black:hover,.red:active {
  color: white;
  box-shadow: inset 0 -100px 0 0 #191919;
}

button:hover {
  color: white;
  /* box-shadow: inset 0 -100px 0 0 #725AC1; */
}

button:active {
  transform: scale(0.9);
}

  .card-container {
    perspective: 800px;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 50vh;
    max-width: 50%;
    margin: auto;
  }
  
  .card {
    width: 210px;
    height: 332px;
    position: relative;
    transform-style: preserve-3d;
    transition: transform 0.75s;
    cursor: pointer;
  }
  
  .card.flipped {
    transform: rotateY(180deg);
  }
  
  .card-face {
    position: absolute;
    inset: 0;
    border-radius: 1em;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  
  .front {
    transform: rotateY(180deg);
  }
  
  .card-face img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    border-radius: inherit;
  }
  
  
  
  
  /* From Uiverse.io by karthik092726122003 */ 
.styled-wrapper .button {
  display: block;
  position: relative;
  width: 76px;
  height: 76px;
  margin: 0;
  overflow: hidden;
  outline: none;
  background-color: transparent;
  cursor: pointer;
  border: 0;
  scale: 80%;
}

.styled-wrapper .button:before {
  content: "";
  position: absolute;
  border-radius: 50%;
  inset: 7px;
  border: 3px solid black; /* Update dynamically for light/dark mode */
  transition:
    opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
}

.styled-wrapper .button:after {
  content: "";
  position: absolute;
  border-radius: 50%;
  inset: 7px;
  border: 4px solid #599a53;
  transform: scale(1.3);
  transition:
    opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
  opacity: 0;
}

.styled-wrapper .button:hover:before,
.styled-wrapper .button:focus-visible:before {
  opacity: 0;
  transform: scale(0.7);
  transition:
    opacity 0.4s cubic-bezier(0.165, 0.84, 0.44, 1),
    transform 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

.styled-wrapper .button:hover:after,
.styled-wrapper .button:focus-visible:after {
  opacity: 1;
  transform: scale(1);
  transition:
    opacity 0.4s cubic-bezier(0.77, 0, 0.175, 1) 80ms,
    transform 0.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) 80ms;
}

.styled-wrapper .button-box {
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
}

.styled-wrapper .button-elem {
  display: inline-flex;
  transition: transform 0.6s ease-in-out;
  transform-origin: center;
  width: 30px;
  height: 30px;
  margin: 24px 18px 0 22px;
  /* transform: rotate(360deg); */
  fill: #f0eeef;
}

.styled-wrapper .button:hover .button-box,
.styled-wrapper .button:focus-visible .button-box {
  transition: 0.4s;
  /* transform: translateX(-69px); */
}

.styled-wrapper .button:hover .button-elem,
.styled-wrapper .button:focus-visible .button-elem {
  transform: rotate(-360deg);
}

.styled-wrapper {
  position: relative;
  right: 4%;
}

.footer {
  font-family: "Rubik", sans-serif;
  font-weight: 300;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #dcdcdc;
  color: black;
  text-align: center;
  box-shadow: 0 -3px 2px -3px rgba(0, 0, 0, 0.2);
  padding: 2vh 0;
}

/* From Uiverse.io by musashi-13 */ 
@keyframes loadingBar {
  0% {
    width: 0%;
    animation-timing-function: ease-out;
  }
  20% {
    width: 20%;
    animation-timing-function: ease-out;
  }
  40% {
    width: 40%;
    animation-timing-function: ease-out;
  }
  60% {
    width: 60%;
    animation-timing-function: ease-out;
  }
  80% {
    width: 80%;
    animation-timing-function: ease-out;
  }
  100% {
    width: 100%;
    animation-timing-function: ease-out;
  }
}



.loader {
  position: relative;
  background-color: #5d5d5d;
  border-radius: 1em;
  height: 1em;
  width: 330px;
  margin: auto;
}

.bar {
  position: relative;
  background-color: #599a53;
  width: 40px;
  height: 100%;
  border-radius: 1em;
  transition: width 0.5s ease-in-out;
  /* animation: loadingBar 6s linear; */
}

.check-bar-container {
  position: absolute;
  left: 0px;
  top: -4px;
  z-index: 69;
  display: flex;
  width: 100%;
  justify-content: space-between;
  height: 0.5em;
}

.confetti-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none; /* Prevent interaction */
  overflow: hidden;
}
@keyframes confetti-fall {
  0% {
    transform: translateY(-100%) rotate(0deg);
    opacity: 1;
  }
  100% {
    transform: translateY(100vh) rotate(360deg);
    opacity: 0.8;
  }
}
.confetti-piece {
  position: absolute;
  width: 10px;
  height: 20px;
  background: var(--confetti-color, red);
  opacity: 0.9;
  animation: confetti-fall var(--fall-duration, 4s) linear infinite;
}

.tooltip {
  position: relative;
  display: inline-block;
  cursor: pointer;
  font-family: "Rubik", sans-serif;
  font-weight: 100;
}

.tooltiptext p {
  text-align: left;
  list-style-type: none;
  padding: 1vh 0vh!important;
  margin: 0!important;
  padding-inline-start: 0px!important;
}

/* .tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
} */

.tooltip.active .tooltiptext,
.geartip.active .geartiptext {
  visibility: visible;
  opacity: 1;
}

.tooltiptext {
  visibility: hidden;
  width: 150px;
  background-color: #333;
  color: #fff;
  text-align: center;
  border-radius: 5px;
  padding: 10px;
  position: absolute;
  z-index: 1;
  top: 125%;
  left: 50%;
  margin-left: -100px;
  opacity: 0;
  transition: opacity 0.3s;
}

.tooltiptext::after {
  content: "";
  position: absolute;
  top: -10px;
  left: 50%;
  margin-left: -10px;
  border-width: 10px;
  border-style: solid;
  border-color: transparent transparent #333 transparent;
}

.geartip {
  position: relative;
  display: inline-block;
  cursor: pointer;
  font-family: "Rubik", sans-serif;
  font-weight: 100;
}

.geartiptext p, a {
  text-align: left;
  color: #fff;
  list-style: none;
  padding: 1vh 0vh!important;
  margin: 0!important;
  padding-inline-start: 0px!important;
}
.geartiptext a {
  position: relative;
  right: 5px;
}

/* .geartip:hover .geartiptext {
  visibility: visible;
  opacity: 1;
} */

.geartiptext {
  visibility: hidden;
  width: 150px;
  background-color: #333;
  color: #fff;
  text-align: center;
  border-radius: 5px;
  padding: 10px;
  position: absolute;
  z-index: 1;
  top: 125%;
  left: 50%;
  margin-left: -100px;
  opacity: 0;
  transition: opacity 0.3s;
}

.geartiptext::after {
  content: "";
  position: absolute;
  top: -10px;
  left: 50%;
  margin-left: -10px;
  border-width: 10px;
  border-style: solid;
  border-color: transparent transparent #333 transparent;
}

